Tue Oct 17 23:10:43 2006  Tim Janik  <timj@gtk.org>

	* bseellipticfilter.c: cosmetics, fixed constants.

Tue Oct 17 22:03:52 2006  Tim Janik  <timj@imendio.com>

	* bseellipticfilter.h: 
	* bseellipticfilter.c: turned remaining global variables into local
	variables or structure members.

Tue Oct 17 02:12:24 2006  Tim Janik  <timj@gtk.org>

	* bseellipticfilter.h, bseellipticfilter.c: moved elliptic integral
	values, chebyshev/elliptic phi and gain into the filter state structure.
	eliminated other global variables by declaring them in local scopes.

Tue Oct 17 01:43:26 2006  Tim Janik  <timj@gtk.org>

	* bseellipticfilter.h: define MAX_ORDER and MAX_COEFFICIENT_ARRAY_SIZE.
	added array for s-plane poles and zeros to DesignState.

	* bseellipticfilter.c: added -ffloat-store to the compilation option to
	keep compatibility with math.h-enabled ellf.c. resolved non-local double
	variable fixmes. store s-plane zeros and poles as ds->zs. changed to use
	MAX_COEFFICIENT_ARRAY_SIZE as array bound.

Tue Oct 17 00:50:08 2006  Tim Janik  <timj@gtk.org>

	* bseellipticfilter.c: changed static y[] array into local scope
	variables/arrays.

Tue Oct 17 00:31:20 2006  Tim Janik  <timj@gtk.org>

	* bseellipticfilter.c: removed remaining static integers by using
	either local variables or by using ds->z_counter. minor whitespace
	fixups.

	* bseellipticfilter.h: added and documented z_counter.

Tue Oct 17 00:17:23 2006  Tim Janik  <timj@gtk.org>

	* bseellipticfilter.c: whitespace and paranthese fixes.

Tue Oct 17 00:05:55 2006  Tim Janik  <timj@gtk.org>

	* bseellipticfilter.h, bseellipticfilter.c: white space fixups,
	changed static zord to ds->n_solved_poles.

Sun Oct 15 23:17:39 2006  Tim Janik  <timj@gtk.org>

	* bseellipticfilter.h:
	* bseellipticfilter.c: include math.h instead of declaring standard 
	math.h functions. print debugging/informative output through an
	extra function. beefed up ARRSIZ once more for high order filters.